--- a/packages/index.css
+++ b/packages/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
+@layer base {
     :root {
         --background: 0 0% 100%;
         --foreground: 222.2 84% 4.9%;
@@ -26,7 +26,7 @@
         --radius: 1rem;
     }
 
-    .dark{
+    .dark {
         --background: 222.2 84% 4.9%;
         --foreground: 210 40% 98%;
         --card: 222.2 84% 4.9%;
@@ -47,7 +47,7 @@
         --input: 217.2 32.6% 17.5%;
         --ring: 224.3 76.3% 48%;
     }
-    [data-theme="dark"] {
+    [data-theme='dark'] {
         --background: 222.2 84% 4.9%;
         --foreground: 210 40% 98%;
         --card: 222.2 84% 4.9%;
